2012-10-19  Chris Fleizach  <cfleizach@apple.com>

        AX: Refactor accessibility name computation so it's more platform independent
        https://bugs.webkit.org/show_bug.cgi?id=99502

        Reviewed by Beth Dakin.

        Update a test to reflect change in what shoud be recognized as a title.

        * platform/mac/accessibility/aria-radiobutton-text.html:

2012-10-19  Zan Dobersek  <zandobersek@gmail.com>

        [WK2][GTK] Fullscreen tests timing out in bots
        https://bugs.webkit.org/show_bug.cgi?id=93973

        Reviewed by Philippe Normand.

        Remove failure expectations for the fullscreen tests. They all pass now,
        with a pass expectation needed for one test to aknowledge that.

        * platform/gtk-wk2/TestExpectations:

2012-10-19  Kent Tamura  <tkent@chromium.org>

        [Chromium] Test expectation update
        http://webkit.org/b/99818

        month-multiple-fields-keyboard-events.html is failing on SnowLeopard too.

        * platform/chromium/TestExpectations:

2012-10-19  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] Pixel tests need rebaseline
        https://bugs.webkit.org/show_bug.cgi?id=99323

        Unreviewed pixel rebaseline.

        Part 7.
        Rebaseline the rest of pixel results. All of these tests producing correct results,
        only the expectations were outdated. Most of the differenes was not detectable by
        looking at the expected and actual results, only ImageDiff sees the difference.

        * platform/qt/http/tests/misc/acid2-expected.png:
        * platform/qt/ietestcenter/css3/bordersbackgrounds/background-size-aspect-ratio-expected.png:
        * platform/qt/tables/mozilla/bugs/bug101674-expected.png:
        * platform/qt/tables/mozilla/bugs/bug10269-2-expected.png:
        * platform/qt/tables/mozilla/bugs/bug10633-expected.png:
        * platform/qt/tables/mozilla/bugs/bug1067-2-expected.png:
        * platform/qt/tables/mozilla/bugs/bug113235-1-expected.png: