@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+
+<html>
+
+<p>ShadowRoot for InsertionPoint should not be rendered if the InsertionPoint is active, while it should be rendered if not active.</p>
+
+<div id="host"><div>
+    <div>host children</div>
+    <content><div>For Inactive content</div></content>
+</div></div>
+
+</html>
